# Sat-Prop-RAO

./: .gitignore  README.md  pyproject.toml
sat_prop_rao/: antenna_pattern.py  cli.py  core.py  propagation_model.py  regulations.py  utilities.py  visualization_tools.py
tests/: test_enuToEcef.py  test_wgs84ToEcef.py
